<resources>
    <string name="app_name">Idao</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="fragment_news">News</string>
    <string name="fragment_title">Idao</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="lets_role">Let\'s role</string>
    <string name="log_in">Sign in</string>
    <string name="your_password">Password</string>
    <string name="yellow_star">Yellow star</string>
    <string name="your_login">Enter username</string>
    <string name="image_dice">image dice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="niyaz_khabibulin">Niyaz Khabibulin</string>
    <string name="news">News</string>
    <string name="my_bio">Hi, my name is Niyaz.
        \n\nIt\'s my project for university
        \n\nI love fish.</string>
    <string name="title">IDAO 2020</string>
    <string name="done">Done</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="image_idao">image idao</string>
    <string name="roll">Roll</string>
    <string name="teams">Teams</string>
    <string name="contests">Contests</string>
    <string name="profile">Profile</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="niyaz_khabibulin">Niyaz Khabibulin</string>

</resources>
