<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.idao.TitleFragment">

    <LinearLayout
        android:id="@+id/title_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/idao_up"
            style="@style/MyStyle"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image_idao"
            android:src="@drawable/up_idao"
            tools:srcCompat="@drawable/up_idao" />


        <EditText
            android:id="@+id/login"
            style="@style/MyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/your_login"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/password"
            style="@style/MyStyle"
            android:hint="@string/your_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/log_in"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto" />

        <ImageView
            android:id="@+id/yellow_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yellow_star"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:textSize="@dimen/small_text_size"
            android:textColor="@android:color/black"
            android:fontFamily="@font/roboto"
            android:text="@string/don_t_have_an_account" />

        <Button
            android:id="@+id/register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:backgroundTint="@color/primary" />
    </LinearLayout>
</layout>